--- a/physik_praktikum/versuch5/versuch5.tex
+++ b/physik_praktikum/versuch5/versuch5.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 
 \usepackage[a4paper, top=2cm, bottom=3cm]{geometry}
+
 \usepackage[ngerman]{babel}
 \usepackage{csquotes}
 
@@ -9,10 +10,17 @@
 \usepackage{amssymb}
 \usepackage{enumitem}
 \usepackage{amsmath}
+
 \usepackage{hyperref}
 
+\usepackage{graphicx}
+\usepackage{wrapfig}
+
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
+
 \usepackage{siunitx}
-\usepackage[version=4]{mhchem}
+\sisetup{locale = DE}
 
 \usepackage{biblatex}
 \DefineBibliographyStrings{ngerman}{
@@ -174,7 +182,7 @@
         
         \subsection{Fallversuch}
             \begin{enumerate}[resume]
-                \item Suchen Sie sich einen Ort als Referenzpunkt in gut \(\SI{2}{Metern}\) Höhe (z.B.\ Oberkante eines Schranks, Türrahmen) und messen Sie
+                \item Suchen Sie sich einen Ort als Referenzpunkt in gut 2 Metern Höhe (z.B.\ Oberkante eines Schranks, Türrahmen) und messen Sie
                 den Abstand \(h\) zum Boden.
                 \item Starten Sie ein Video auf ihrem Handy mit Stativ oder lassen Sie sich von einer zweiten Person helfen.
                 Nehmen Sie das Video von etwas weiter weg auf und achten Sie darauf das der Start, sowie das Aufkommen auf dem Boden im Video gut zu sehen sind.
