--- a/physik_praktikum/versuch6/versuch6.tex
+++ b/physik_praktikum/versuch6/versuch6.tex
@@ -23,6 +23,7 @@
 \usepackage{pgfplots}
 
 \usepackage{siunitx}
+% TODO: \sisetup{locale = DE}
 
 \usepackage{biblatex}
 \DefineBibliographyStrings{ngerman}{
