Versuch 2 fertig und Versuch 1 vorbereitet

--- a/physik_praktikum/versuch2/aufbau.tex
+++ b/physik_praktikum/versuch2/aufbau.tex
@@ -2,7 +2,7 @@
 \section{Anleitung}
       Was ist ein Trägheitsmoment? aus Lehrbuch
 
-      Durchführung mit Bild woher Variblen an Bild
+      Durchführung mit Bild woher Variablen an Bild
       Ergebnisse (Messergebnisse), da nochmal ordentlich
       Auswertung
       Formeln aus der Anleitung nicht nochmal herleiten
@@ -23,4 +23,4 @@
     Vergleich der Ergebnisse
     Hoffentlich ähnliche Ergebnisse.
     Diskutiere z.B Reibungseffekte, Kleinwinkelnäherung, etc.
-    Fazit beste Methode, z.B. kleinester Fehler, Durchführung am wenigsten Aufpassen.
+    Fazit beste Methode, z.B. kleinster Fehler, Durchführung am wenigsten Aufpassen.
