--- a/physik_praktikum/versuch2/quellen.bib
+++ b/physik_praktikum/versuch2/quellen.bib
@@ -7,7 +7,7 @@
 	year = {2019}
 }
 
-@confrence{ExPhy1,
+@conference{ExPhy1,
 	author = {Sangam Chaterjee},
 	title = {Experimentalphysik I: Mechanik und Elemente der Wärmelehre},
 	year = 2022
@@ -59,4 +59,10 @@
 	urldate = {2022-03-18}
 }
 
-% Satz von Steiner Wiki
+@book{Gerthsen,
+	author = {Christian Gerthsen and Hans O. Kneser and Helmut Vogel},
+	editor = {},
+	publisher = {Springer-Verlag Berlin Heidelberg},
+	title = {Physik: ein Lehrbuch zum Gebrauch neben Vorlesungen (16. Aufl.)},
+	year = {1989}
+}
