--- a/physik_praktikum/versuch3/Versuch3_StatistikI_Würfel_Finn_Wagner.ipynb
+++ b/physik_praktikum/versuch3/Versuch3_StatistikI_Würfel_Finn_Wagner.ipynb
@@ -234,7 +234,7 @@
     "    \n",
     "## 10 Würfel:\n",
     "Erwartungswert µ = 10*3.5 = 35 <br>\n",
-    "Standardabweichung σ = math.sqrt(10 * 17.5/6) ≈ 5.4"
+    "Standardabweichung $\\sigma$ = math.sqrt(10 * 17.5/6) ≈ 5.4"
    ]
   },
   {
