--- a/physik_praktikum/versuch6/versuch6.tex
+++ b/physik_praktikum/versuch6/versuch6.tex
@@ -265,7 +265,7 @@
             \begin{equation}
                 \SI{0.25}{m} \cdot \SI{1.2041}{\frac{kg}{m^3}} \cdot \SI{9.81}{\frac{m}{s^2}} = \SI{2.95}{Pa} % 0.25m * 1.20141kg/m^3 * 9.81m/s^2 as pascals
             \end{equation}
-            Es ergibt sich ein Fehler von \(\pm \SI{2.95}{Pa}\). Jenachdem wie der Luftballon orientiert ist, schwankt der Wert zwischen diesen Grenzen.
+            Es ergibt sich ein Fehler von \(\pm \SI{2.95}{Pa}\). Je nachdem wie der Luftballon orientiert ist, schwankt der Wert zwischen diesen Grenzen.
             Wie wir weiter unten sehen werden, ein vernachlässigbar kleiner Anteil am Gesamtfehler.
 
             % TODO: Ausströmgeschwindigkeit konstant berücksichtigt???
@@ -284,7 +284,7 @@
             Es wurde wiederholt der Umfang des selben Ballons gemessen, um abschätzen zu können um wie viel die Werte voneinander abweichen.
             Die Standardabweichung der sechs Messungen beträgt \( \approx \SI{0.9}{cm}\) (Berechnung in Abschnitt (\ref{Messfehler_Umfang})) und wird hier als Abweichung angesetzt.
             
-            Die Auflösung der für den Versuch verwendeten Stoppuhr (Handystoppuhr) ist eine \(\SI{1}{ms}\).
+            Die Auflösung der für den Versuch verwendeten Stoppuhr (Handystoppuhr) ist eine \(\SI{1}{cs}\).
             Die menschliche Reaktionszeit beträgt aber bereits \(\approx \SI{180}{ms} \) \cite{Reaktionszeit}
             Um auf den abklingenden Ton oder den sich nicht mehr verändernden Ballon zu reagieren, verstreicht also bereits eine ganze Weile.
             Bis dann die Stoppuhr gedrückt wurde sind bereits \(\approx \SI{0.2}{s}\) vergangen.
