--- a/physik_praktikum/versuch4/Versuch4_StatistikII_Finn.ipynb
+++ b/physik_praktikum/versuch4/Versuch4_StatistikII_Finn.ipynb
@@ -1126,6 +1126,8 @@
     "abw_int2 = abs( mw_int_2 / np.sqrt(np.pi * 2) - 1 ) * 100\n",
     "abw_int3 = abs( mw_int_3 / np.sqrt(np.pi * 2) - 1 ) * 100\n",
     "\n",
+    "# TODO: Mittelwerte und noch mit ausgeben\n",
+    "\n",
     "print(f'Wir vergleichen die Ergebnisse unserer Monte-Carlo-Integration mit dem theoretischen Wert des Integrals')\n",
     "print(f'Für {100}   Zufallsstichproben weicht der Wert um {abw_int1:.4f} % vom Literaturwert ab.')\n",
     "print(f'Für {1000}  Zufallsstichproben weicht der Wert um {abw_int2:.4f} % vom Literaturwert ab.')\n",
