--- a/physik_praktikum/versuch6/versuch6.tex
+++ b/physik_praktikum/versuch6/versuch6.tex
@@ -62,6 +62,7 @@
     Vereinfachend nehmen wir auch an, das die Geschwindigkeit entlang aller Stromlinien indentisch ist \cite{Aufgabenstellung}.
     Außerdem wird die Reibung des Fluids an Oberflächen vernachlässigt.
     Für genauere Berechnung könnten Korrekturterme für Luft aus der Fachliteratur entnommen werden.
+    % TODO: Stationäre Strömung
 
     In unserem Versuch verwenden wir einen aufgeblasenen Luftballon, aus welchem Luft (auf Grund von Druckdifferenzen) mit \(v_a\) ausströmt.
     Für unseren Versuch spielt der Druck, der aus der Schwerkraft entsteht keine Rolle (siehe Fehlerrechnung (\ref{fehlerrechnung})).
